--- a/Projects/index.html
+++ b/Projects/index.html
@@ -8,5 +8,6 @@
 <body>
   <h1>Welcome to My Website</h1>
   <p>This is my personal portfolio site.</p>
+  <a href="about.html">GO TO About</a>
 </body>
 </html>
