--- a/about.html
+++ b/about.html
@@ -1,1 +1,15 @@
+<!-- about.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>About Me</title>
+</head>
+<body>
+  <h1>About Me</h1>
+  <p>This is the About page.</p>
+  <a href="index.html">Back to Home</a>
+</body>
+</html>
 
