--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Orhan Efe Kocaoğlu</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mutluluk Endeksi Giriş</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      background: #f1f2f6;
+    }
+    h1 {
+      color: #2d3436;
+    }
+    a {
+      margin-top: 20px;
+      padding: 12px 24px;
+      background-color: #0984e3;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+      font-size: 18px;
+    }
+    a:hover {
+      background-color: #74b9ff;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to My Website</h1>
-  <p>This is my personal portfolio site.</p>
-  <a href="about.html">GO TO About</a>
+  <h1>Hoş geldin!</h1>
+  <p>Mutluluk Endeksi grafiğini görmek için tıkla:</p>
+  <a href="happinessintro.html">Grafiğe Git</a>
 </body>
 </html>
