--- a/hapinessintro.html
+++ b/hapinessintro.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Mutluluk Endeksim</title>
   <link rel="stylesheet" href="style.css">
-  
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
   <h1>Orhan'ın Mutluluk Endeksi</h1>
