--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
 <body>
   <h1>Hoş geldin!</h1>
   <p>Mutluluk Endeksi grafiğini görmek için tıkla:</p>
-  <a href="happinessintro.html">Grafiğe Git</a>
+  <a href="hapinessintro.html">Grafiğe Git</a>
 </body>
 </html>
